# OpenGLProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  testfunctions.txt
copy/: main.cpp
include/glad/: glad.h
src/: glad.c  test.cpp  test.h
